--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="/static/css/home.css">
+<link rel="stylesheet" href="static/css/home.css">
 
 <section class="presentation">
     <div>
