--- a/base/templates/base/about_me.html
+++ b/base/templates/base/about_me.html
@@ -53,7 +53,7 @@
             <li>ADAPTABLE</li>
         </ul>
     
-        <h2 class="titles_2">HOBBYS</h2>
+        <h2 class="titles_2">HOBBIES</h2>
         <ul class="list_2">
             <li>TRAVEL</li>
             <li>PHOTOGRAPHY</li>
