Updating wsgi.py

--- a/base/templates/base/construction.html
+++ b/base/templates/base/construction.html
@@ -8,7 +8,7 @@
 <section class="construction_page">
     <div class="construction_box">
         <h1>SORRY! <br>PAGE UNDER CONSTRUCTION</h1>
-        <a href="{% url 'home' %}" ><button type="button" class="button_backtohome">BACK TO HOME PAGE</button></a>
+        <a href="/" ><button type="button" class="button_backtohome">BACK TO HOME PAGE</button></a>
     </div>
 </section>
 
