--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -3,7 +3,7 @@
 
 <nav>
     <div class="nav">
-        <a href="/home" class="logo"><img src="/static/images/LOGO.svg" alt="Logo"></a>
+        <a href="/" class="logo"><img src="/static/images/LOGO.svg" alt="Logo"></a>
         <ul class="navbar_menus">
             <li class="menus_left" id="first_menu_left"><a href="/">HOME</a></li>
             <li class="menus_left"><a href="/about_me">ABOUT ME</a></li>
