--- a/base/templates/base/email_sent.html
+++ b/base/templates/base/email_sent.html
@@ -9,7 +9,7 @@
     <div class="success_box">
         <h1>Thanks for reaching out!</h1>
         <p>Your message was successfully sent. I will do my best to get back to you in a timely manne :)</p>
-        <a href="{% url 'home' %}" ><button type="button" class="button_backtohome">BACK TO HOME PAGE</button></a>
+        <a href="/" ><button type="button" class="button_backtohome">BACK TO HOME PAGE</button></a>
     </div>
 </section>
 
