Correcting logo error

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -25,7 +25,7 @@
 </section>
 
 <section class="my_photo">
-    <img src="/static/images/IMAGEM_DE_PERFIL.svg" alt="My photo">
+    <img src="/static/images/IMAGEM DE PERFIL.png" alt="My photo">
 </section>
 
 <section class="social">
