Updating the CV

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -19,7 +19,7 @@
         </p>
     </div>
     <div>
-        <a href="/static/documents/Hassan Oliveira - CV  FR.pdf" download><button type="button" class="button_download">DOWNLOAD CV</button></a>
+        <a href="/static/documents/Hassan Oliveira - CVs.pdf" download><button type="button" class="button_download">DOWNLOAD CV</button></a>
         <a href="/about_me" ><button type="button" class="button_aboutme">ABOUT ME</button></a>
     </div>
 </section>
